# music_api

./: .gitignore  Cargo.toml  readme.md  test.db  test.db-journal  work.md
.VSCodeCounter/2024-06-30_19-27-37/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
examples/: online.rs  sql.rs
sample_data/: app_rhyme_database.json  database_json.json  test.db
sample_data/kuwo/: album.json  artist_albums.json  artist_musics.json  chart_musics.json  get_musics_of_music_list.json  info.json  leader_board.json  music_chart_collection.json  search.json  search_music_list.json  share_playlist.json  tag_playlist.json
sample_data/netease/: artist_albums.json  artist_musics.json  chart_music.json  get_musics_from_album.json  get_musics_from_chart.json  get_musics_from_music_list.json  music_chart_collection.json  playlist_tags.json  search_music.json  search_music_list.json  share.json  tag_playlist.json
src/: filter.rs  lib.rs  music.rs  music_list.rs  search_factory.rs  sql_store_actory.rs  util.rs
src/data/: mod.rs
src/data/interface/: artist.rs  chart.rs  database.rs  json.rs  mod.rs  music_aggregator.rs  playlist.rs  playlist_subscription.rs  results.rs  server.rs  utils.rs
src/data/migrations/: create_music_aggregator_table.rs  create_playlist_collection_table.rs  create_playlist_music_junction_table.rs  create_playlist_table.rs  mod.rs
src/data/models/: mod.rs  music_aggregator.rs  music_platform.rs  playlist.rs  playlist_collection.rs  playlist_music_junction.rs
src/factory/: mod.rs
src/factory/online_factory/: aggregator_search.rs  mod.rs  musiclist_online.rs
src/factory/sql_factory/: db_action.rs  mod.rs  music_action.rs  musicdata_action.rs  musiclist_action.rs  sql_musiclist.rs
src/interface/: database.rs  json.rs  mod.rs  music_aggregator.rs  music_chart.rs  playlist.rs  playlist_collection.rs  playlist_subscription.rs  playlist_tag.rs  server.rs  utils.rs
src/kuwo/: kuwo_album.rs  kuwo_lyric.rs  kuwo_music.rs  kuwo_music_info.rs  kuwo_music_list.rs  kuwo_pic.rs  kuwo_quality.rs  kuwo_search.rs  mod.rs
src/music_aggregator/: mod.rs  music_aggregator_online.rs  music_aggregator_sql.rs
src/platform_integrator/: mod.rs
src/platform_integrator/kuwo/: kuwo_album.rs  kuwo_lyric.rs  kuwo_music.rs  kuwo_music_info.rs  kuwo_music_list.rs  kuwo_pic.rs  kuwo_quality.rs  kuwo_search.rs  mod.rs  util.rs
src/platform_integrator/utils/: mod.rs
src/platform_integrator/wangyi/: encrypt.rs  mod.rs  request.rs  wy_album.rs  wy_lyric.rs  wy_music.rs  wy_music_detail.rs  wy_musiclist.rs  wy_search.rs
src/refactor/: mod.rs
src/refactor/adapter/: mod.rs
src/refactor/adapter/kuwo/: mod.rs  model.rs
src/refactor/data/: common.rs  enums.rs  mod.rs
src/refactor/data/common/: mod.rs  music.rs  playlist.rs  playlist_subscription.rs
src/refactor/data/interface/: mod.rs  music.rs  music_aggregator.rs  playlist.rs  quality.rs  utils.rs
src/refactor/data/migrations/: create_music_aggregator_table.rs  create_music_table.rs  create_playlist_music_junction_table.rs  create_playlist_table.rs  mod.rs
src/refactor/data/models/: local_album.rs  local_album_music_junction.rs  mod.rs  music.rs  music_aggregator.rs  music_platform.rs  playlist.rs  playlist_music_junction.rs
src/refactor/server/: mod.rs
src/refactor/server/kuwo/: migration.rs  mod.rs  model.rs
src/refactor/server/netease/: migration.rs  mod.rs  model.rs
src/server/: mod.rs
src/server/kuwo/: create_kuwo_music_table_migration.rs  mod.rs  model.rs
src/server/kuwo/web_api/: album.rs  artist.rs  chart.rs  info.rs  lyric.rs  mod.rs  music.rs  playlist.rs  playlist_tag.rs  share_playlist.rs  utils.rs
src/server/netease/: create_netease_music_table_migration.rs  mod.rs  model.rs
src/server/netease/web_api/: album.rs  artist.rs  chart.rs  encrypt.rs  lyric.rs  mod.rs  music.rs  music_info.rs  playlist.rs  playlist_tag.rs  request.rs  rsa_pub_key.pem  share_playlist.rs  utils.rs
(+25 files in other folders)
