[package]
name = "music_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
anyhow = "1.0.89"
async-trait = "0.1.83"
base64 = "0.22.1"
cbc = "0.1.2"
crypto = "0.5.1"
ecb = "0.1.2"
env_logger = "0.11.5"
futures = "0.3.31"
generic-array = "1.1.0"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.22"
md-5 = "0.10.6"
once_cell = "1.20.2"
rand = "0.8.5"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = [
    "json",
    "rustls-tls",
    "rustls-tls-webpki-roots",
], default-features = false }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
rsa = { version = "0.9.6", features = ["hazmat"] }
sea-orm = { version = "1.1.0", default-features = false, features = [
    "sqlx-all",
    "runtime-tokio-rustls",
    "serde_json",
    "with-json",
] }
sea-orm-migration = { version = "1.1.0", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
], default-features = false }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
sha2 = "0.10.8"
# sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"

[dev-dependencies]
serial_test = "3.1.1"
